fix text-align center tablet

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -24,6 +24,15 @@
             max-width: 150%;
             height: auto;
         }
+        .container-fluid.my_prodece {
+            text-align: center;
+        }
+        .container-fluid.soccer {
+            text-align: center;
+        }
+        .container-fluid.yugioh {
+            text-align: center;
+        }
     }
 }
 @media screen and (max-width: 576px) {
